--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -77,12 +77,16 @@ publisher:
 menu:
   Home: index.html
   Scenarios:
-    Patient Perspective:
+    Self Determined:
       Register Patient in Reception: scenario-register-patient-in-reception.html
       Triage Patient: scenario-triage-patient.html
       Consultant Assessment of Patient: scenario-consultant-assessment.html
-    ED Consultant Perspective:
-      Consultant Assessment of Patient: todo.html
+      Junior Doctor Claims Patient: scenario-junior-doctor-claims-patient.html
+      Junior Doctor Clerks Paitent: scenario-junior-doctor-clerks-patient.html
+    Ambulance low/medium severity:
+      Ambulance work checks patient into reception: todo.html
+    Ambulance high severity:
+      Triage nurse selects incoming ambulance arrival: todo.html
   Artifacts: artifacts.html
 
 # ╭───────────────────────────Less Common Implementation Guide Properties──────────────────────────╮
